Improved react & recreated classic

--- a/packages/core/src/global/shared.scss
+++ b/packages/core/src/global/shared.scss
@@ -2,6 +2,8 @@
 
 .theme-toggle {
   all: unset;
+  height: 1em;
+  width: 1rem;
   cursor: pointer;
   @if $checkbox {
     input[type="checkbox"],
