--- a/packages/core/src/variants/base.scss
+++ b/packages/core/src/variants/base.scss
@@ -1,3 +1,4 @@
+// These get combined with rest of the scss to create the final css file
 $button: true !default;
 $div: true !default;
 $checkbox: false !default;
