Created new eclipse icon

--- a/packages/core/src/toggles/eclipse.scss
+++ b/packages/core/src/toggles/eclipse.scss
@@ -6,11 +6,16 @@ $variable: #{getVar(eclipse)};
 @include generic(eclipse, flip-y);
 
 .theme-toggle__eclipse {
-  clipPath {
+  * {
+    transition-property: transform, d;
+    transition-duration: var($variable);
+    transition-timing-function: cubic-bezier(0, 0, 0.05, 1.15);
+    transform-origin: center;
+  }
+  g {
     path {
-      transition-property: transform, d;
-      transition-duration: calc(var($variable));
-      transition-timing-function: ease;
+      transition-delay: calc(var($variable) * 0.2);
+      transition-duration: calc(var($variable) * 0.8);
     }
   }
 }
@@ -18,7 +23,17 @@ $variable: #{getVar(eclipse)};
 @include toggledSelector(eclipse) {
   clipPath {
     path {
-      d: path("M-32 0h64v32h-64zm36 16a1 1 0 0024 1 1 1 0 00-24-1");
+      d: path("M-20 0h48v24h-48zm25 12a1 1 0 0014 0 1 1 0 00-14 0");
+    }
+  }
+  g {
+    circle {
+      transform: scale(1.6);
+    }
+    path {
+      transition-delay: 0;
+      transition-duration: var($variable);
+      transform: scale(0.5);
     }
   }
 }
