--- a/website/src/styles/tailwind.css
+++ b/website/src/styles/tailwind.css
@@ -13,3 +13,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.disable-transition *:not(.theme-toggle *) {
+  transition: none !important;
+}
